--- a/flitify-webpanel/frontend/src/pages/interact/interact.css
+++ b/flitify-webpanel/frontend/src/pages/interact/interact.css
@@ -1,5 +1,70 @@
-.view-root {
-	margin-top: 84px;
-	padding-left: 16px;
-	padding-right: 16px;
+:root {
+	--sidebar-bg-color: #1a182d;
+	--color-sidebar-button: #2f2c4a;
+}
+
+.view-main {
+	margin-top: 0;
+	padding: 0;
+	height: 100%;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
+}
+
+.sidebar {
+	box-sizing: border-box;
+	height: 100%;
+	max-height: 100%;
+	min-width: 120px;
+	width: 300px;
+	background-color: var(--sidebar-bg-color);
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-content: center;
+	padding-top: 8px;
+}
+
+.sidebar .header {
+	font-weight: 300;
+	font-size: 16px;
+	text-align: center;
+}
+
+.sidebar .pc-list {
+	list-style: none;
+	padding: 0;
+	display: block;
+	width: 100%;
+	margin: 0;
+	margin-top: 12px;
+}
+
+.sidebar .pc-list li a {
+	display: block;
+	border-radius: 12px;
+	margin: 0;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	margin-left: 24px;
+	margin-right: 24px;
+	padding-left: 12px;
+	padding-top: 12px;
+	color: white;
+	text-decoration: none;
+	transition: color 0.3s;
+}
+
+.sidebar .pc-list li a.active {
+	background-color: #2f2c4a;
+}
+
+.sidebar .pc-list li a {
+	color: white;
+	text-decoration: none;
+}
+
+.sidebar .pc-list li a:hover {
+	color: var(--color-navbar-link-hover);
 }
