--- a/flitify-webpanel/frontend/src/pages/interact/interact.css
+++ b/flitify-webpanel/frontend/src/pages/interact/interact.css
@@ -140,7 +140,7 @@
 
 .dashboard {
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 42px);
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
